[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objetos/CasillaNoActiva.gd" type="Script" id=1]
[ext_resource path="res://Presets/BotonComunTema.tres" type="Theme" id=2]
[ext_resource path="res://Presets/Fuente_peque√±a.tres" type="DynamicFont" id=3]
[ext_resource path="res://Recursos/Sonidos/click2.mp3" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "click"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[node name="CasillaNoActiva" type="Button"]
margin_right = 38.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 23, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
icon_align = 1
expand_icon = true
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/click = SubResource( 2 )

[node name="click_sonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 3.0

[connection signal="gui_input" from="." to="." method="_on_CasillaNoActiva_gui_input"]
